download-quotation added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li><a href="#projects">Our Work</a></li>
         <!-- <li><a href="#gallery">Gallery</a></li> -->
         <li><a href="#contact">Contact Us</a></li>
-        <li><a href="" id="downloadBtn">Download Quotation</a></li>
+        <li><a href="SHAHI ARCHITECT AND CONSTRUCTION.pdf" download="" id="downloadBtn">Download Quotation</a></li>
       </div>
     </div>
     <section class="firstSection">
