--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div style="background-color: rgb(1, 15, 22)">
-      <nav>
+    <div style="background: white" class="nav-top">
+      <div>
+        <img src="Screenshot (62).png" alt="" height="80px" width="400px">
+      </div>
+      <!-- <nav>
         <div class="logo">
           <img src="logo.png" alt="" height="190px" width="500px" />
         </div>
@@ -34,8 +37,8 @@
             shahiconstructions2024@gmail.com
           </div>
           <div id="info5">"Beautiful And Glorious Work-Our Promise"</div>
-        </div>
-      </nav>
+        </div> -->
+      <!-- </nav> -->
       <div class="navbar">
         <li><a href="#">Home</a></li>
         <li><a href="#about">About Us</a></li>
@@ -45,6 +48,7 @@
         <li><a href="SHAHI ARCHITECT AND CONSTRUCTION.pdf" download="" id="downloadBtn">Download Quotation</a></li>
       </div>
     </div>
+    <!-- <div id="info5">"Beautiful And Glorious Work-Our Promise"</div> -->
     <section class="firstSection">
       <div><p>TURN YOUR DREAM HOME INTO REALITY</p></div>
     </section>
@@ -157,7 +161,7 @@ a beautiful house near our home town </p>
           <h5>Years of Experience</h5>
         </div>
         <div class="box13">
-          <p><b>15+</b></p>
+          <p><b>30+</b></p>
           <h5>Projects</h5>
         </div>
       </div>
@@ -206,14 +210,14 @@ a beautiful house near our home town </p>
   <div class="seperation2"></div>
   <div class="container5">
     <div class="box16">
-      <div class="about border1"><p>ABOUT US</p></div>
+      <div class="about "><p>ABOUT US</p></div>
       <div class="about1">
         Shahi Construction is a Construction Company Owned by Ret. Air Force
         Solider Mr. Pramod Kumar Shahi, started in 2021 in Gorakhpur.
       </div>
     </div>
     <div class="box17">
-      <div class="add border1">ADDRESS</div>
+      <div class="add ">ADDRESS</div>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3562.5486550371934!2d83.42583037521872!3d26.75877557673943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39915b490ce71abb%3A0xa9ab7826162d8e9c!2sPawan%20Vihar%2C%20Air%20Force%20Colony%2C%20Nanda%20Nagar%2C%20Gorakhpur%2C%20Uttar%20Pradesh%20273014!5e0!3m2!1sen!2sin!4v1716791183576!5m2!1sen!2sin"
         width="400"
@@ -226,24 +230,24 @@ a beautiful house near our home town </p>
     </div>
 
     <div class="box18">
-      <div class="follow border1">FOLLOW US</div>
+      <div class="follow ">FOLLOW US</div>
       <div class="insta">
         <a href="https://www.instagram.com/pramodshahi9/"
           ><i class="fa-brands fa-instagram"></i
-        ></a>
-        Instagram
+        > Instagram
+      </a>
       </div>
       <div class="whatsapp">
         <a href="https://wa.link/9ii4lg"
           ><i class="fa-brands fa-whatsapp"></i
-        ></a>
-        Whatsapp
+        >Whatsapp</a>
+        
       </div>
       <div class="facebook">
         <a href="https://www.facebook.com/pramod.shahi.948"
           ><i class="fa-brands fa-facebook"></i
-        ></a>
-        Facebook
+        >Facebook
+      </a>
       </div>
     </div>
   </div>
