--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="thirdSection-heading">
     <h2 data-aos="fade-left" id="project-heading" class="project-title">OUR PROJECTS</h2>
   </div>
-  <div class="seperation1"></div>
+  <!-- <div class="seperation1"></div> -->
 </section>
 
 
