--- a/index.html
+++ b/index.html
@@ -170,6 +170,44 @@
 
 
 
+<!-- Contact Us Section -->
+<section class="contact-section">
+  <div class="contact-heading">
+      <p data-aos="fade-right" id="contact">CONTACT US</p>
+  </div>
+
+  <div class="contact-container">
+      <!-- Social Links -->
+      <div class="contact-info">
+          <p>Connect with us on social media:</p>
+          <div class="social-icons">
+              <a href="https://www.instagram.com/pramodshahi9/" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="https://wa.link/9ii4lg" target="_blank">
+                  <i class="fa-brands fa-whatsapp"></i>
+              </a>
+              <a href="https://www.facebook.com/pramod.shahi.948" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+              </a>
+          </div>
+      </div>
+
+      <!-- Contact Form -->
+      <form class="contact-form">
+          <div class="form-group">
+              <input type="text" placeholder="Your Name" required>
+          </div>
+          <div class="form-group">
+              <input type="email" placeholder="Your Email" required>
+          </div>
+          <div class="form-group">
+              <textarea placeholder="Your Message" rows="4" required></textarea>
+          </div>
+          <button type="submit">Send Message</button>
+      </form>
+  </div>
+</section>
 
 
 
