contact and copyright

--- a/index.html
+++ b/index.html
@@ -41,16 +41,59 @@
       <a href="#projects" class="cta-button">See What We Have Built</a>
   </section>
 
-
   <section class="secondSection about-section" id="about">
     <div class="secondSection-heading">
         <h2 id="about-heading" class="about-title">ABOUT US</h2>
-      </div>
-      <h3 class="story-title">OUR <span style="color: orange;">STORY</span></h3>
-      <div class="seperation"></div>
+    </div>
+    <h3 class="story-title">OUR <span style="color: orange;">STORY</span></h3>
+    <div class="seperation"></div>
+
+    <div class="about-content">
+        <p class="about-text">
+            Shahi Construction is a trusted name in the industry, known for building dream homes with passion and perfection.
+        </p>
+        <button class="read-more-btn"><a href="#expand">Read More</a></button>
+    </div>
+
+    <!-- Expanded Section (Inside About Us) -->
+    <div class="expanded-content" >
+        <div class="expanded-inner">
+            <div class="text-content"id="expand">
+                <h3>Building Dreams, One Brick at a Time</h3>
+                <p>
+                    Founded in 2021 by Ret. Air Force Soldier **Mr. Pramod Kumar Shahi**, Shahi Constructions has 
+                    been dedicated to delivering **exceptional quality homes** that stand the test of time. 
+                    Our commitment to **precision, durability, and excellence** sets us apart.
+                </p>
+                <p>
+                    We specialize in **residential, commercial, and custom projects**, ensuring each structure 
+                    is crafted with the **best materials, innovative designs, and superior craftsmanship**.
+                </p>
+                <p>
+                    From the foundation to the final touch, we ensure that every step is executed with **perfection**.
+                    Join us in **creating spaces that inspire and endure**.
+                </p>
+                <button class="back-btn">Go Back</button>
+            </div>
+            <div class="image-gallery">
+             
+<img src="/assets/big-house.jpg" alt="Luxury Home Construction">
+<img src="/assets/img4.jpg" alt="Modern Home Interiors">
+<img src="/assets/Legend-Homes-Reed-Brown-pic.jpg" alt="Ongoing Project">
+            </div>
+        </div>
+    </div>
 </section>
 
 
+
+
+
+
+
+<!-- <img src="/assets/big-house.jpg" alt="Luxury Home Construction">
+<img src="/assets/img4.jpg" alt="Modern Home Interiors">
+<img src="/assets/Legend-Homes-Reed-Brown-pic.jpg" alt="Ongoing Project"> -->
 
 <section class="thirdSection" id="project">
   <div class="thirdSection-heading">
